overflow issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,6 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 	background-color: white;
-	overflow:hidden;
 }
 
 html, body {
